--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "slack-node": "^0.1.8"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.34.0"
+    "@vercel/ncc": "^0.34.0",
+    "prettier": "^2.7.1"
   }
 }
