--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "dependencies": {
     "@actions/core": "^1.9.1",
     "@actions/github": "^5.0.3",
+    "@slack/webhook": "^6.1.0",
     "axios": "^0.27.2",
-    "gh-release": "^6.0.4",
-    "slack-node": "^0.1.8"
+    "gh-release": "^6.0.4"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.34.0",
