--- a/action.yml
+++ b/action.yml
@@ -25,6 +25,10 @@ inputs:
     target-commitish:
         description: Main branch used by github-releases
         default: 'main'
+    owner:
+        description: the repo owner's handle
+    repo:
+        description: the repo's name
 outputs:
     release:
         description: The Github release object
