--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tag-n-slack",
   "description": "Creates a new Tag with a Changelog from `CHANGELOG.md` using the `version` from `package.json` and notifies Slack about the release.",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "scripts": {
     "build": "ncc build src/index.js -o action"
   },
@@ -9,10 +9,10 @@
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
     "@slack/webhook": "^7.0.2",
+    "@tryfabric/mack": "^1.2.1",
     "axios": "1.6.7",
     "gh-release": "^7.0.2",
-    "lodash": "^4.17.21",
-    "slackify-markdown": "^4.4.0"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.34.0",
