--- a/action.yml
+++ b/action.yml
@@ -28,7 +28,10 @@ inputs:
     project-owner:
         description: the repo owner's handle
         default: ${{ github.event.repository.owner.login }}
-    ticketConfig:
+    remove-images:
+        description: Remove images from the Slack message
+        default: ${{ github.event.repository.private }}
+    ticket-config:
         description: JSON string to format the ticketing system links
         default: '{}'
 outputs:
